[package]
name = "vocage"
version = "0.2.0"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
rand = "0.7.3"
chrono = "0.4.15"
ansi_term = "0.12.1"
termion = "1.5.5"
